--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-end=production",
+    "watch": "webpack --watch --mode=development",
+    "serve": "webpack serve --mode=development",
     "test": "jest"
   },
   "repository": {
@@ -40,10 +42,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
+    "style-loader": "^3.3.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "react": "^18.1.0",
